--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "test",
+  "description": "testmeanjs",
   "version": "0.5.0-beta",
   "meanjs-version": "0.5.0-beta",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "Roberto morgado",
   "license": "MIT",
   "repository": {
     "type": "git",
